--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,7 +1,7 @@
 # Requirements to test and build the documentation
 # Install via pip: sudo pip install -U -r requirements.txt
 sphinx >= 1.6.1
-matplotlib>=2.0,<3.0
+matplotlib
 numpy>=1.12
 numpydoc>=0.7
 pytest
