--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -10,5 +10,6 @@ sphinx-gallery>=0.0.13
 sphinxcontrib-bibtex>=0.3.4
 sphinxcontrib-programoutput>=0.8
 sphinxcontrib-spelling>=2.1
+sphinxcontrib-doxylink==1.6.1
 pillow
 scipy
