#fix 196 cblas.h for openblas should now be detected correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,7 +239,15 @@ find_package(UMFPACK)
 
 if (";${BLAS_LIBRARIES};" MATCHES "openblas")
     message(STATUS "openblas is used: ${BLAS_LIBRARIES}")
-    message(STATUS "openblas is used: ${PC_BLAS_INCLUDE_DIRS}")
+
+    SET(Open_BLAS_INCLUDE_SEARCH_PATHS
+        /usr/include/openblas
+        /usr/include
+    )
+    FIND_PATH(OpenBLAS_INCLUDE_DIR NAMES 
+        cblas.h PATHS ${Open_BLAS_INCLUDE_SEARCH_PATHS}
+    )
+    message(STATUS "openblas cblas.h: ${OpenBLAS_INCLUDE_DIR}")
     set(OPENBLAS_FOUND TRUE)
 else()
     set(OPENBLAS_FOUND FALSE)
