--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,9 @@ if (CONDA_BUILD)
     include_directories(${CONDA_PREFIX})
 endif()
 
+if (OPENBLAS_FOUND)
+    include_directories(${OpenBLAS_INCLUDE_DIR})
+endif()
 
 if (USE_BOOST_THREAD)
     if (Boost_THREAD_FOUND)
