--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -27,6 +27,8 @@
 #define UMFPACK_FOUND @UMFPACK_FOUND@
 
 #define OPENBLAS_FOUND @OPENBLAS_FOUND@
+#define OPENBLAS_CBLAS_FOUND @OPENBLAS_CBLAS_FOUND@
+
 #define CONDA_BUILD @CONDA_BUILD@
 
 #define USE_IPC @USE_IPC@
