Add Mac OSX RPath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ project(libgimli)
 # Check if conda package is created
 if(DEFINED ENV{CONDA_BUILD})
     message(STATUS "Conda package is being created.")
+    set(CMAKE_MACOSX_RPATH 1)
     set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
     set(CONDA_BUILD TRUE)
     set(Boost_INCLUDE_DIR "${CMAKE_PREFIX_PATH}/include")
@@ -89,7 +90,7 @@ if (GIT_FOUND)
     message(STATUS, "setting version from git description: ${GIMLI_GITVERSION}")
     set(LIBGIMLI_VERSION ${GIMLI_GITVERSION})
 else()
-    set(LIBGIMLI_VERSION "untaged")
+    set(LIBGIMLI_VERSION "untagged")
 endif()
 
 set(PACKAGE_NAME  \"${PROJECT_NAME}\" )
