Fix linux conda build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,13 @@ project(libgimli)
 # Check if conda package is created
 if(DEFINED ENV{CONDA_BUILD})
     message(STATUS "Conda package is being created.")
-    set(CMAKE_MACOSX_RPATH 1)
-    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+    if (APPLE)
+	    set(CMAKE_MACOSX_RPATH 1)
+	    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+    endif()	 
     set(CONDA_BUILD TRUE)
     set(Boost_INCLUDE_DIR "${CMAKE_PREFIX_PATH}/include")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-class-memaccess") # new since gcc.8 maybe need to be checked, not on apple
 else()
     set(CONDA_BUILD FALSE)
 endif()
@@ -40,8 +43,8 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" ST
     if (NOT APPLE)
 	    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-int-in-bool-context")
 	    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-class-memaccess")
-    else()
-	   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-undefined-var-template")
+	    #else()
+	    #set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-undefined-var-template")
     endif()
     add_definitions(-std=c++11)
 
@@ -238,8 +241,8 @@ endif()
 
 set (UMFPACK_FOUND FALSE)
 
-#find_or_build_package(Triangle triangle LOCAL)
-find_package(Triangle)
+find_or_build_package(Triangle triangle LOCAL)
+#find_package(Triangle)
 find_or_build_package(BLAS lapack)
 find_or_build_package(LAPACK lapack)
 find_or_build_package(CHOLMOD suitesparse)
