--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -75,7 +75,7 @@ add_custom_target(sphinxapi
     ALL
         # Copy build scripts for API doc generation
     COMMAND
-	    sphinx-autogen -i ${SPHINX_SRC_DIR}/doc/pygimliapi/index.rst ${SPHINX_SRC_DIR}/doc/pygimliapi/physics.rst -t ${SPHINX_SRC_DIR}/doc/_templates -o ${SPHINX_SRCBUILD_DIR}/doc/pygimliapi/_generated
+	    sphinx-autogen -i ${SPHINX_SRC_DIR}/doc/pygimliapi/index.rst ${SPHINX_SRC_DIR}/doc/pygimliapi/viewer.rst ${SPHINX_SRC_DIR}/doc/pygimliapi/physics.rst -t ${SPHINX_SRC_DIR}/doc/_templates -o ${SPHINX_SRCBUILD_DIR}/doc/pygimliapi/_generated
     COMMENT
         "Building pygimli api doc"
     DEPENDS
